# bark

./: CMakeLists.txt  README.md  setup.py
analyses/: baryonstopping.cc  midrapidityratios.cc  rapidity_spectra.cc  simple.cc
include/: analysis.h  analysisregister.h  binaryreader.h  histogram1d.h  histogram2d.h  utils.h
python/: bindings.cc  pyproject.toml  setup.py  test.py
src/: analysis.cc  binaryreader.cc  bindings.cc  main.cc  utils.cc
